[tool.poetry]
name = "blurring"
version = "0.1.0"
description = "Serviço que acessa uma imagem do GCS, e cria uma outra com Blur"
authors = ["Gilson Filho <me@gilsondev.in>"]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-storage = "^2.4.0"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
